[gd_scene load_steps=10 format=3 uid="uid://btetwq0fyumv"]

[ext_resource type="Script" uid="uid://cwwwmewm0phss" path="res://pages/tester/tester.gd" id="1_uug6k"]
[ext_resource type="PackedScene" uid="uid://e6aydemh5yb1" path="res://engine/penciler/penciler.tscn" id="2_o2o8t"]
[ext_resource type="PackedScene" uid="uid://b5w5ac45k5g5s" path="res://engine/level_manager.tscn" id="2_qvp0h"]
[ext_resource type="PackedScene" uid="uid://c2pluv27fc2bv" path="res://engine/bg/bg.tscn" id="2_vbo6q"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="3_sy0tr"]
[ext_resource type="PackedScene" uid="uid://cl0yelhxpgf2k" path="res://engine/editor_events.tscn" id="5_4ui7b"]
[ext_resource type="PackedScene" uid="uid://bex50bhvo5njo" path="res://pages/game/stats_panel/stats_panel.tscn" id="7_74ued"]
[ext_resource type="PackedScene" uid="uid://cwi7db32xkv2g" path="res://engine/player_manager.tscn" id="7_abcde"]
[ext_resource type="PackedScene" uid="uid://c6gq7x1vjx1w" path="res://ui/minimap.tscn" id="7_ju48d"]

[node name="Tester" type="Node2D"]
script = ExtResource("1_uug6k")

[node name="Penciler" parent="." instance=ExtResource("2_o2o8t")]

[node name="BG" parent="." instance=ExtResource("2_vbo6q")]

[node name="LevelManager" parent="." instance=ExtResource("2_qvp0h")]

[node name="PlayerManager" parent="." instance=ExtResource("7_abcde")]

[node name="EditorEvents" parent="." instance=ExtResource("5_4ui7b")]

[node name="UI" type="CanvasLayer" parent="."]
layer = 120

[node name="Container" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundPanel" type="Panel" parent="UI/Container"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0

[node name="Minimap" parent="UI/Container" instance=ExtResource("7_ju48d")]
layout_mode = 1
anchors_preset = -1
offset_left = 124.0
offset_right = -124.0
offset_bottom = -884.0

[node name="StatsPanel" parent="UI/Container" instance=ExtResource("7_74ued")]
layout_mode = 1
anchor_top = 0.861
anchor_bottom = 1.0
offset_top = 0.119934
offset_right = 0.400009
offset_bottom = 0.0

[node name="UpdateStatsPanel" type="Timer" parent="UI/Container"]
process_callback = 0
wait_time = 0.25

[node name="Back" type="Button" parent="UI/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.924
anchor_top = 0.926
anchor_right = 0.977
anchor_bottom = 0.972
offset_left = 0.919922
offset_top = -0.0800781
offset_right = -0.840088
offset_bottom = 0.23999
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_sy0tr")
text = "Back"
